--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,29 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 .App {
-  position: absolute;
-  left: 0;
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.map-container {
+  position: fixed;
+  left: 20%;
+  width: 80%;
   height: 100%;
 }
 
 .map {
-width: 100%;
-height: 100%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 .address a {
@@ -43,4 +59,43 @@ height: 100%;
 
 .icons a:hover {
   color: #3c6b91;
+}
+
+.filter-options-container {
+  position: absolute;
+  background-color: #3b3b3b;
+  color: #ffffff;
+  width: 20%;
+  min-height: 100%;
+}
+
+.filter-options-container .list-locations {
+  padding-left: 15px;
+}
+
+.filter-options-container .list-locations li {
+  padding-bottom: 10px;
+  list-style: none;
+}
+
+.filter-options-container .list-locations li a {
+  text-decoration: none;
+  color: #b13232;
+}
+
+.filter-options-container .list-locations li a:hover {
+  color: #ff0000;
+}
+
+.filter-counties-list {
+  background-color: #fffad1;
+  border: 2px solid #000;
+  border-radius: 15px;
+  padding: 8px;
+}
+
+.filter-counties-list:focus {
+  background-color: #fff;
+  outline: none;
+  color: #000;
 }
