--- a/src/App.css
+++ b/src/App.css
@@ -6,28 +6,37 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  background-color: #3b3b3b;
+
+}
+
 .App {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .app-title {
-  position: absolute;
-  left: 20%;
+  position: fixed;
+  z-index: 999;
+  left: 0;
   top: 0;
   height: 8%;
-  width: 80%;
+  width: 100%;
   background-color: #3b3b3b;
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 5px;
+  margin: 0;
+}
+
+.app-title h1 {
+  margin: 10px;
 }
 
 .map-container {
   position: fixed;
-  left: 20%;
+  right: 0;
   top: 8%;
   width: 80%;
   height: 92%;
@@ -36,7 +45,6 @@ html {
 .map {
   width: 100%;
   height: 100%;
-  position: absolute;
 }
 
 .address a {
@@ -75,11 +83,13 @@ html {
 }
 
 .filter-options-container {
-  position: absolute;
   background-color: #3b3b3b;
   color: #ffffff;
   width: 20%;
   min-height: 100%;
+  position: absolute;
+  left: 0;
+  top: 8%;
 }
 
 .filter-options-container .list-locations {
@@ -123,6 +133,7 @@ html {
   border: none;
   font-size: 1.1em;
   color: #fff;
+  text-align: left;
 }
 
 .list-locations .location-button:hover {
