--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-html {
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
 body {
   background-color: #3b3b3b;
 
@@ -180,6 +172,10 @@ body {
 
 .list-locations.show {
   visibility: visible;
+}
+
+.noscroll {
+  overflow: hidden;
 }
 
 .infowindow {
