--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ body {
   background-color: #3b3b3b;
   color: #ffffff;
   width: 20%;
-  min-height: 100%;
+  min-height: 92%;
   position: absolute;
   left: 0;
   top: 8%;
@@ -171,7 +171,7 @@ body {
 }
 
 .filter-content.show {
-  visibility: visible;
+  display: block;
 }
 
 .noscroll {
@@ -203,7 +203,7 @@ body {
   }
 
   .filter-content {
-    visibility: hidden;
+    display: none;
   }
 }
 
