--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,19 @@
+/* ********************** */
+/* Parent/Document styles */
+/* ********************** */
+
 body {
   background-color: #3b3b3b;
-
 }
 
 .App {
   width: 100%;
   height: 100%;
 }
+
+/* ***************** */
+/* Application Title */
+/* ***************** */
 
 .app-title {
   position: fixed;
@@ -29,6 +36,10 @@ body {
   vertical-align: middle;
 }
 
+/* ************* */
+/* Map Component */
+/* ************* */
+
 .map-container {
   position: fixed;
   right: 0;
@@ -40,6 +51,13 @@ body {
 .map {
   width: 100%;
   height: 100%;
+}
+/* ********** */
+/* Infowindow */
+/* ********** */
+
+.infowindow {
+  max-width: 200px;
 }
 
 .address a {
@@ -76,6 +94,10 @@ body {
 .icons a:hover {
   color: #3c6b91;
 }
+
+/* ************************ */
+/* Filter-options Component */
+/* ************************ */
 
 .filter-options-container {
   background-color: #3b3b3b;
@@ -172,10 +194,6 @@ body {
 
 .filter-content.show {
   display: block;
-}
-
-.infowindow {
-  max-width: 200px;
 }
 
 @media screen and (max-width: 768px) {
