--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 /* ********************** */
+
 /* Parent/Document styles */
+
 /* ********************** */
 
 body {
@@ -12,7 +14,9 @@ body {
 }
 
 /* ***************** */
+
 /* Application Title */
+
 /* ***************** */
 
 .app-title {
@@ -37,7 +41,9 @@ body {
 }
 
 /* ************* */
+
 /* Map Component */
+
 /* ************* */
 
 .map-container {
@@ -54,7 +60,9 @@ body {
 }
 
 /* ********** */
+
 /* Infowindow */
+
 /* ********** */
 
 .infowindow {
@@ -73,12 +81,12 @@ body {
 
 .infowindow .rating a {
   text-decoration: none;
-  color: #000000;
+  color: #000;
   font-weight: 600;
 }
 
 .infowindow .fa-foursquare {
-  color: fuchsia;
+  color: #ff00ff;
   letter-spacing: 5px;
   font-size: 18px;
 }
@@ -103,7 +111,9 @@ body {
 }
 
 /* ************************ */
+
 /* Filter-options Component */
+
 /* ************************ */
 
 .menu-icon {
@@ -115,7 +125,7 @@ body {
 
 .filter-options-container {
   background-color: #3b3b3b;
-  color: #ffffff;
+  color: #fff;
   width: 20%;
   min-height: 92%;
   position: absolute;
@@ -176,24 +186,24 @@ body {
 
 .list-locations .location-button:hover {
   cursor: pointer;
-  color: rgb(255, 0, 0);
+  color: #ff0000;
 }
 
 .list-locations .location-button:focus {
   outline: none;
-  color: rgb(93, 104, 255);
+  color: #5d68ff;
 }
 
 .filter-content .parkdata-text {
   color: #000;
-  background-color: white;
+  background-color: #fff;
   font-weight: 600;
   text-align: center;
   margin: 0;
 }
 
 .filter-content .parkdata-text a {
-  color: #444444;
+  color: #444;
   text-decoration: none;
 }
 
@@ -201,22 +211,18 @@ body {
   .menu-icon {
     visibility: visible;
   }
-
   .filter-options-container {
     width: 180px;
     transform: translateX(-80%);
     z-index: 998;
     transition: transform 0.3s;
   }
-
   .map-container {
     width: 100%;
   }
-
   .app-title {
     letter-spacing: 2px;
   }
-
   .filter-content {
     display: none;
   }
